# edge-client

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/: labeler.yml
.github/workflows/: build.yaml  checks-zizmor.yaml  merge.yaml  pr.yaml  release.yaml
nix/: edgli.nix
src/: blokli.rs  client.rs  errors.rs  lib.rs  main.rs  strategy.rs  telemetry.rs  telemetry_common.rs  traits.rs
src/blokli/: constants.rs  contracts.rs  errors.rs  mod.rs
