[package]
name = "edgli"
version = "1.0.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2024"
description = "Light client implementing the minimum HOPR protocol to serve as an entry node into the mixnet."
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/edge-client"
license = "GPL-3.0-only"
build = "build.rs"

[features]
default = ["prometheus", "runtime-tokio", "blokli"]
prometheus = ["hopr-lib/prometheus"]
runtime-tokio = ["dep:tokio", "hopr-lib/runtime-tokio"]
session-server = ["hopr-lib/session-server"]
telemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  # "dep:tracing-opentelemetry",
]
testing = ["hopr-lib/testing"]
blokli = ["dep:serde_json", "dep:hopli"]

# To use profiling:
# 1. Set RUSTFLAGS="--cfg tokio_unstable" before building
# 2. Enable the 'prof' feature: cargo build --feature prof
prof = [
  "dep:console-subscriber",
] # must be built with 'tokio_unstable': https://github.com/tokio-rs/console/tree/main/console-subscriber

[dependencies]
anyhow = "1.0.100"
async-signal = "0.2.12"
cfg-if = "1.0.4"
clap = { version = "4.5.53", features = ["derive", "env", "string"] }
console-subscriber = { version = "0.5.0", optional = true }
futures = "0.3.31"
lazy_static = "1.5.0"
signal-hook = "0.3.18"
serde_yaml = { version = "0.9.34-deprecated" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "tracing",
], optional = true }
tracing = { version = "0.1.43", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
# validator = { version = "0.20.0", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
  "trace",
  "reqwest-client",
  "tls-roots",
  "http-proto",
  "grpc-tonic",
], optional = true }
opentelemetry_sdk = { version = "0.31.0", optional = true }
# tracing-opentelemetry = { version = "0.32.0", optional = true }
url = "2.5.7"

hopr-lib = { git = "https://github.com/hoprnet/hoprnet", rev = "19b89d794bb6987061a359ba85f9b1f61035dfdf", features = [
  "transport-use-quic", # use quic transport, but do not announce it
  "session-client",
  "serde",
] }
hopr-db-node = { git = "https://github.com/hoprnet/hoprnet", rev = "19b89d794bb6987061a359ba85f9b1f61035dfdf", features = [
  "runtime-tokio",
] }
hopr-chain-connector = { git = "https://github.com/hoprnet/hoprnet", rev = "19b89d794bb6987061a359ba85f9b1f61035dfdf", features = [
  "runtime-tokio",
] }
hopr-ct-telemetry = { git = "https://github.com/hoprnet/hoprnet", rev = "19b89d794bb6987061a359ba85f9b1f61035dfdf" }
hopr-strategy = { git = "https://github.com/hoprnet/hoprnet", rev = "19b89d794bb6987061a359ba85f9b1f61035dfdf" }
hopli = { git = "https://github.com/hoprnet/hopli/", rev = "23300eae543295ff34dc764c869050a7add32820", optional = true }

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1.48", default-features = false, features = [
  "secure",
] }

[dev-dependencies]

[build-dependencies]
vergen-gix = { version = "1.0.9", features = ["build"] }
anyhow = "1.0.100"
