[package]
name = "edgli"
version = "1.0.2"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2024"
description = "Light client implementing the minimum HOPR protocol to serve as an entry node into the mixnet."
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/edge-client"
license = "GPL-3.0-only"

[features]
default = ["prometheus", "runtime-tokio", "blokli"]
prometheus = ["hopr-lib/prometheus"]
runtime-tokio = ["dep:tokio", "hopr-lib/runtime-tokio"]
session-server = ["hopr-lib/session-server"]
telemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  # "dep:tracing-opentelemetry",
]
testing = ["hopr-lib/testing"]
blokli = ["dep:serde_json"]

# To use profiling:
# 1. Set RUSTFLAGS="--cfg tokio_unstable" before building
# 2. Enable the 'prof' feature: cargo build --feature prof
prof = [
  "dep:console-subscriber",
] # must be built with 'tokio_unstable': https://github.com/tokio-rs/console/tree/main/console-subscriber

[dependencies]
anyhow = "1.0.100"
async-signal = "0.2.12"
cfg-if = "1.0.4"
clap = { version = "4.5.55", features = ["derive", "env", "string"] }
console-subscriber = { version = "0.5.0", optional = true }
futures = "0.3.31"
lazy_static = "1.5.0"
signal-hook = "0.4.1"
serde_yaml = { version = "0.9.34-deprecated" }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "tracing",
], optional = true }
tracing = { version = "0.1.43", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
# validator = { version = "0.20.0", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
  "trace",
  "reqwest-client",
  "tls-roots",
  "http-proto",
  "grpc-tonic",
], optional = true }
opentelemetry_sdk = { version = "0.31.0", optional = true }
# tracing-opentelemetry = { version = "0.32.0", optional = true }
url = "2.5.7"

hopr-lib = { version = "4.1.0", git = "https://github.com/hoprnet/hoprnet", rev = "b81434abcf1cce279ce15887d9214988c86128d1", features = [
  "transport-use-quic", # use quic transport, but do not announce it
  "session-client",
  "serde",
] }
hopr-db-node = { version = "0.3.1", git = "https://github.com/hoprnet/hoprnet", rev = "b81434abcf1cce279ce15887d9214988c86128d1", features = [
  "runtime-tokio",
] }
hopr-chain-connector = { version = "0.13.2", git = "https://github.com/hoprnet/hoprnet", rev = "b81434abcf1cce279ce15887d9214988c86128d1", features = [
  "runtime-tokio",
] }
hopr-ct-telemetry = { version = "0.1.0", git = "https://github.com/hoprnet/hoprnet", rev = "b81434abcf1cce279ce15887d9214988c86128d1" }
hopr-strategy = { version = "0.16.0", git = "https://github.com/hoprnet/hoprnet", rev = "b81434abcf1cce279ce15887d9214988c86128d1" }

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1.48", default-features = false, features = [
  "secure",
] }

[dev-dependencies]

[build-dependencies]
anyhow = "1.0.100"
