[package]
name = "edgli"
version = "3.0.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2024"
description = "Light client implementing the minimum HOPR protocol to serve as an entry node into the mixnet."
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/edge-client"
license = "GPL-3.0-only"

[features]
default = ["runtime-tokio", "blokli"]
runtime-tokio = ["dep:tokio", "hopr-lib/runtime-tokio"]
session-server = ["hopr-lib/session-server"]
# Enable hopr-lib telemetry (Prometheus metrics) and OpenTelemetry OTLP exporter
telemetry = [
  "hopr-lib/telemetry",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  # "dep:tracing-opentelemetry",
]
testing = ["hopr-lib/testing"]
blokli = []

# To use profiling:
# 1. Set RUSTFLAGS="--cfg tokio_unstable" before building
# 2. Enable the 'prof' feature: cargo build --feature prof
prof = [
  "dep:console-subscriber",
] # must be built with 'tokio_unstable': https://github.com/tokio-rs/console/tree/main/console-subscriber

[dependencies]
anyhow = "1.0.100"
async-signal = "0.2.13"
async-trait = "0.1"
cfg-if = "1.0.4"
clap = { version = "4.5.55", features = ["derive", "env", "string"] }
console-subscriber = { version = "0.5.0", optional = true }
futures = "0.3.31"
lazy_static = "1.5.0"
signal-hook = "0.4.3"
serde_yaml = { version = "0.9.34-deprecated" }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
  "rt-multi-thread",
  "macros",
  "tracing",
], optional = true }
tracing = { version = "0.1.43", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.22", features = [
  "fmt",
  "json",
  "env-filter",
] }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
  "trace",
  "reqwest-client",
  "tls-roots",
  "http-proto",
  "grpc-tonic",
], optional = true }
opentelemetry_sdk = { version = "0.31.0", optional = true }
# tracing-opentelemetry = { version = "0.32.0", optional = true }
url = "2.5.8"

hopr-lib = { git = "https://github.com/hoprnet/hoprnet", rev = "5bc538a0060e39e91f482c79fd5aad1708bc3f21", features = [
  "session-client",
  "serde",
] }
hopr-chain-connector = { git = "https://github.com/hoprnet/hoprnet", rev = "5bc538a0060e39e91f482c79fd5aad1708bc3f21", features = [
  "runtime-tokio",
] }
hopr-reference = { git = "https://github.com/hoprnet/hoprnet", rev = "5bc538a0060e39e91f482c79fd5aad1708bc3f21", features = [
  "runtime-tokio",
] }
hopr-strategy = { git = "https://github.com/hoprnet/hoprnet", rev = "5bc538a0060e39e91f482c79fd5aad1708bc3f21", features = [
  "strategy-auto-funding",
  "strategy-closure-finalizer",
] }

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1.48", default-features = false, features = [
  "secure",
] }

[build-dependencies]
anyhow = "1.0.100"
